--- a/package.json
+++ b/package.json
@@ -1,18 +1,1 @@
-{
-	"name": "cpm",
-	"author": "Kris Zyp",
-	"dependencies": [],
-	"contributors": [],
-	"keywords": [
-		"module",
-		"URI",
-		"async",
-		"reload"
-	],
-	"engines": {"node":">=0.1.90"},
-	"githubName": "cpm",
-	"type": "zip",
-	"main":"./lib/cpm",
-	"version":"0.1.0",
-	"location": "http://github.com/kriszyp/cpm/zipball/master"
-}
+{"directories":{"lib":"."},"mappings":{"rql":"http://kzyp.dojotoolkit.org/packages/dojo1.5.0.zip"}}
